--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.png"/>
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
